K8s guides oci improvements (#1281)
* K8s guide

* k8s guide improvements

* k8s guide improvements

* k8s guide improvements

* k8s guide improvements

* add groovy and kotlin soruces

* kotlin and groovy guides uses classes not the records

* Add error example

* Update buildSrc/src/main/groovy/io/micronaut/guides/GuideProjectGenerator.groovy

Co-authored-by: Álvaro Sánchez-Mariscal <alvaro.sanchez-mariscal@oracle.com>

* guide improvements

* guide improvements

* guide improvements

* guide improvements

* update tags

* guide improvements

* Draft guide for OCI Kubernetes

* Update guides/micronaut-k8s/micronaut-k8s.adoc

Co-authored-by: Bernard Horan <bernard.horan@oracle.com>

* Update guides/micronaut-k8s/micronaut-k8s.adoc

Co-authored-by: Bernard Horan <bernard.horan@oracle.com>

* Update guides/micronaut-k8s/micronaut-k8s.adoc

Co-authored-by: Bernard Horan <bernard.horan@oracle.com>

* Update guides/micronaut-k8s/micronaut-k8s.adoc

Co-authored-by: Bernard Horan <bernard.horan@oracle.com>

* Update guides/micronaut-k8s/micronaut-k8s.adoc

Co-authored-by: Bernard Horan <bernard.horan@oracle.com>

* Update guides/micronaut-k8s/micronaut-k8s.adoc

Co-authored-by: Bernard Horan <bernard.horan@oracle.com>

* Update guides/micronaut-k8s/micronaut-k8s.adoc

Co-authored-by: Bernard Horan <bernard.horan@oracle.com>

* Update guides/micronaut-k8s/micronaut-k8s.adoc

Co-authored-by: Bernard Horan <bernard.horan@oracle.com>

* Update guides/micronaut-k8s/micronaut-k8s.adoc

Co-authored-by: Bernard Horan <bernard.horan@oracle.com>

* Update guides/micronaut-k8s/micronaut-k8s.adoc

Co-authored-by: Bernard Horan <bernard.horan@oracle.com>

* Update guides/micronaut-k8s/micronaut-k8s.adoc

Co-authored-by: Bernard Horan <bernard.horan@oracle.com>

* Update guides/micronaut-k8s/micronaut-k8s.adoc

Co-authored-by: Bernard Horan <bernard.horan@oracle.com>

* Update guides/micronaut-k8s/microna