@@ -2,6 +2,7 @@ package example.micronaut.controllers;
 
 import example.micronaut.models.Item;
 import example.micronaut.models.Order;
+import io.micronaut.core.util.CollectionUtils;
 import io.micronaut.http.HttpStatus;
 import io.micronaut.http.annotation.Body;
 import io.micronaut.http.annotation.Controller;
@@ -15,6 +16,7 @@ import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
 import java.math.BigDecimal;
 import java.util.ArrayList;
+import java.util.Optional;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -25,10 +27,10 @@ class OrdersController {
     private final List<Order> orders = new ArrayList<>();
 
     @Get("/{id}")  // <3>
-    public Order findById(int id) {
+    public Optional<Order> findById(int id) {
         return orders.stream()
                 .filter(it -> it.id().equals(id))
-                .findFirst().orElse(null);
+                .findFirst();
     }
 
     @Get  // <4>
@@ -38,7 +40,7 @@ class OrdersController {
 
     @Post  // <5>
     public Order createOrder(@Body @Valid Order order) {
-        if (order.itemIds() == null || order.itemIds().isEmpty()) {
+        if (CollectionUtils.isEmpty(order.itemIds())) {
             throw new HttpStatusException(HttpStatus.BAD_REQUEST, "Items must be supplied");
         }
 
@@ -48,7 +50,9 @@ class OrdersController {
                 ).findFirst().orElseThrow(
                         () -> new HttpStatusException(HttpStatus.BAD_REQUEST, String.format("Item with id %s doesn't exist", x))
                 )
-        ).collect(Collectors.toList());
+
+        ).toList();
+
 
         BigDecimal total = items.stream().map(Item::price).reduce(BigDecimal::add).orElse(new BigDecimal("0"));
         Order newOrder = new Order(orders.size() + 1, order.userId(), items, null, total);
